# CPP_aruco_marker

junkbot/: README.md
junkbot/junkbot_install/: git_init.sh  install_dependencies_indigo_.sh
junkbot/rpv1_install/: fix_gazebo.sh  git_init.sh~  git_sync.sh  git_sync.sh~  install_dependencies_kinetic.sh
junkbot/src/junkbot_2d_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
junkbot/src/junkbot_2d_navigation/launch/: amcl.launch  amcl_demo.launch~  gmapping.launch  gmapping.launch~  gmapping_demo.launch~  hector.launch  hector_ugv.launch~  rtabmap.launch  rtabmap.launch~
junkbot/src/junkbot_3d_navigation/launch/rtabmap/: rtabmap.launch
junkbot/src/junkbot_control/: README.md~  package.xml~
junkbot/src/junkbot_control/config/: control.yaml~  robot_localization.yaml~
junkbot/src/junkbot_control/launch/: control_rpv1.launch~  teleop.launch
junkbot/src/junkbot_description/: CMakeLists.txt~  package.xml~
junkbot/src/junkbot_description/env-hooks/: 50.v1_description.sh~
junkbot/src/junkbot_description/launch/: minmal.launch  rpv1.launch~
junkbot/src/junkbot_description/rpv1/urdf/: accessories.urdf.xacro~  custom_example.urdf  jackal.urdf.xacro~  kinect.urdf.xacro  rpv1.urdf.xacro  rpv1.urdf.xacro~
junkbot/src/junkbot_description/rpv1/urdf/accessories/: bridge_plate.urdf.xacro  bridge_plate.urdf.xacro~  camera_mount.urdf.xacro~  sick_lms1xx_mount.urdf.xacro~  (+1 more)
junkbot/src/junkbot_gazebo/: README.md  README.md~  package.xml  package.xml~
junkbot/src/junkbot_gazebo/launch/: run_simulation.launch  world-park.launch  world-park.launch~
junkbot/src/junkbot_gazebo/worlds/: tapbot.world
junkbot/src/junkbot_gazebo/worlds/worlds/: p3dx.world~
junkbot/src/junkbot_movebase/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml~
junkbot/src/junkbot_movebase/config/: costmap_common.yaml
junkbot/src/junkbot_movebase/launch/: move_base.launch  move_base.launch~
junkbot/src/junkbot_navigation/: package.xml
junkbot/src/junkbot_navigation/launch/: gmapping_demo.launch  rtabmap.launch
junkbot/src/junkbot_navigation/params/: costmap_common_params.yaml
junkbot/src/junkbot_viz/: CMakeLists.txt  README.md
junkbot/src/junkbot_viz/launch/: view_model.launch  view_model.launch~  view_robot.launch~
junkbot/src/junkbot_viz/rviz/: rtabmap.rviz
junkbot/src/rpv1_2d_navigation/launch/: amcl.launch~  hector.launch~  hector_tap.launch~  hector_ugv.launch  move_base.launch~  move_base_mapless_demo.launch  octomap_turtlebot.launch
junkbot/src/rpv1_3d_navigation/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
junkbot/src/rpv1_3d_navigation/launch/rtabmap/: kinect_rtabmap.launch  kinect_rtabmap.launch~
junkbot/src/rpv1_control/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
junkbot/src/rpv1_control/config/: robot_localization.yaml
junkbot/src/rpv1_control/launch/: control.launch  control_rpv1.launch
junkbot/src/rpv1_description/: CMakeLists.txt  README.md  README.md~  package.xml
junkbot/src/rpv1_description/env-hooks/: 50.husky_description.sh~  50.v1_description.sh
junkbot/src/rpv1_description/launch/: minmal.launch~  rpv1.launch
junkbot/src/rpv1_description/rpv1/meshes/: wheel.stl
junkbot/src/rpv1_description/rpv1/sensors/: kinect.urdf.xacro  kinect_gazebo.xacro
junkbot/src/rpv1_description/rpv1/urdf/: accessories.urdf.xacro  empty.urdf  hokuyo.urdf.xacro  hokuyo.urdf.xacro~  kinect.urdf.xacro~  rpv1.gazebo  sick_tim55x.urdf.xacro  sick_tim55x.urdf.xacro~
junkbot/src/rpv1_description/rpv1/urdf/accessories/: camera_mount.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart6.urdf.xacro~  stereo_camera_mount.urdf.xacro
junkbot/src/rpv1_gazebo/: CMakeLists.txt  CMakeLists.txt~
junkbot/src/rpv1_gazebo/launch/: gazebo.launch  reem.launch  run_simulation.launch~
junkbot/src/rpv1_gazebo/worlds/worlds/: p3dx.world  reem_world.world
junkbot/src/rpv1_movebase/: package.xml
junkbot/src/rpv1_movebase/config/: costmap_common.yaml~  planner.yaml  planner.yaml~
junkbot/src/rpv1_navigation/: CMakeLists.txt  package.xml~
junkbot/src/rpv1_navigation/launch/: amcl_demo.launch  odom_navigation_demo.launch
junkbot/src/rpv1_navigation/launch/include/: move_base.launch
junkbot/src/rpv1_viz/: CMakeLists.txt~  README.md~  package.xml  package.xml~
junkbot/src/rpv1_viz/launch/: view_robot.launch  view_rtabmap.launch~
junkbot/src/rpv1_viz/rviz/: robot.rviz  robot1.rviz
