<?xml version="1.0"?>
<package>
  <name>rpv1_description</name>
  <version>0.1.0</version>
  <description>
    A rpv1 vanora description for Gazebo. First working version
  </description>
  
  <maintainer email="chris.vanorarobots@gmail.com">chris</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/chrissunny94</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>metal_detector_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>metal_detector_msgs</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
